Add correct headings to headings snippets

--- a/medi7100codecentre.html
+++ b/medi7100codecentre.html
@@ -584,6 +584,30 @@
                 </div>
                 <hr>
                 <div class="copythis">
+                    <h2 class="text-bg-uq p-2"><span class="uq-icon icon-advocacy-white"></span> Advocacy and Public Health heading</h2>
+                </div>
+                <hr>
+                <div class="copythis">
+                    <h2 class="text-bg-uq p-2"><span class="uq-icon icon-ethics-white"></span> Ethics heading</h2>
+                </div>
+                <hr>
+                <div class="copythis">
+                    <h2 class="text-bg-uq p-2"><span class="uq-icon icon-med-science-white"></span> Med Sciences heading</h2>
+                </div>
+                <hr>
+                <div class="copythis">
+                    <h2 class="text-bg-uq p-2"><span class="uq-icon icon-research-epid-white"></span> Research and Epidemiology heading</h2>
+                </div>
+                <hr>
+                <div class="copythis">
+                    <h2 class="text-bg-uq p-2"><span class="uq-icon icon-rrm-white"></span> Rural and Remote Health heading</h2>
+                </div>
+                <hr>
+                <div class="copythis">
+                    <h2 class="text-bg-uq p-2"><span class="uq-icon icon-transition-white"></span> Transition to MD heading</h2>
+                </div>
+                <hr>
+                <div class="copythis">
                     <h2 class="text-bg-uq p-2"><span class="uq-icon icon-clinical-plenary-white"></span> Clinical plenary heading</h2>
                 </div>
                 <hr>
@@ -620,16 +644,14 @@
                     <h2 class="text-bg-uq p-2"><span class="uq-icon icon-workshop-white"></span> Workshop heading</h2>
                 </div>
                 <!--icons
-                <span class="uq-icon icon-psw-white"></span>
-<span class="uq-icon icon-clinical-plenary-white"></span>
-<span class="uq-icon icon-cpl-white"></span>
-<span class="uq-icon icon-immersion-white"></span>
-<span class="uq-icon icon-lectorial-white"></span>
-<span class="uq-icon icon-masterclass-white"></span>
-<span class="uq-icon icon-practical-white"></span>
-<span class="uq-icon icon-symposium-white"></span>
-<span class="uq-icon icon-tbl-white"></span>
-<span class="uq-icon icon-workshop-white"></span>
+ <span class="uq-icon icon-psw-white"></span>
+<span class="uq-icon icon-advocacy-white"></span>
+<span class="uq-icon icon-ethics-white"></span>
+<span class="uq-icon icon-med-science-white"></span>
+<span class="uq-icon icon-research-epid-white"></span>
+<span class="uq-icon icon-rrm-white"></span>
+<span class="uq-icon icon-transition-white"></span>
+
 -->
             </div>
             <div class="tab-pane fade" id="buildImgText" role="tabpanel">
