--- a/medi7100codecentre.html
+++ b/medi7100codecentre.html
@@ -49,7 +49,7 @@
     </style>
     <!--Dropdowns in the nav open on hover-->
     <script>
-        $(document).ready(function () {
+        window.addEventListener('load', function () {
             $(".dropdown").hover(function () {
                 var dropdownMenu = $(this).children(".dropdown-menu");
                 if (dropdownMenu.is(":visible")) {
@@ -57,7 +57,19 @@
                     dropdownMenu.css('z-index','1030');
                 }
             });
-        });     
+        tinymce.get("tinyMCEtable").setContent('<table class="table table-responsive table-bordered table-hover">\n<thead><th></th>\n<th></th>\n<th></th>\n</thead>\n<tbody>\n<tr>\n<td></td>\n<td></td>\n<td></td>\n</tr>\n<tr>\n<td></td>\n<td></td>\n<td></td>\n</tr>\n<tr>\n<td></td>\n<td></td>\n<td></td>\n</tr>\n</tbody>\n</table>')
+        
+        if(localStorage.getItem("tableAlertIsClosed") !== "true"){
+            //do nothing
+        }    
+        else{
+            $('.tableAlert').remove();
+        }
+        $('#tableAlertClose').on('click',function(){
+            $('.tableAlert').remove();
+            localStorage.setItem("tableAlertIsClosed","true")
+        })   
+    });     
     </script>
     <!--Setup tooltips + TinyMCE-->
     <script type="text/javascript">
