add custom styled alerts

--- a/medi7100codecentre.html
+++ b/medi7100codecentre.html
@@ -26,6 +26,9 @@
     <!--<script src="https://uq-itali.github.io/uqlearnx/medi7100/bootstrap-5.2.1-dist/js/bootstrap.bundle.js" crossorigin="anonymous"></script>
     <script src="https://uq-itali.github.io/uqlearnx/medi7100/bootstrap-5.2.1-dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.js"></script>
+
+    <!--Customise alerts on the site-->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.3/dist/sweetalert2.all.min.js"></script>
     <style>
         .dropdown:hover .dropdown-menu {
             display: block;
@@ -63,6 +66,9 @@
         .form-control[type="number"]::-webkit-inner-spin-button, .form-control[type="number"]::-webkit-outer-spin-button {
             -webkit-appearance: none;
             margin: 0;
+        }
+        .swal2-styled.swal2-confirm{
+            background-color: #51247a !important;
         }
        
     </style>
